// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleField should render correctly 1`] = `
<DocumentFragment>
  .cache-6rcy61 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  background-color: #ffffff;
  padding: 8px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
}

.cache-6rcy61:focus-within {
  border: 1px solid #4f0599;
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-6rcy61>* {
  margin: 6px;
}

.cache-1xj7r5t {
  font-size: 16px;
  color: #4a4f62;
  border: none;
  outline: none;
  background-color: #ffffff;
}

.cache-1xj7r5t::-webkit-input-placeholder {
  color: #b2b6c3;
}

.cache-1xj7r5t::-moz-placeholder {
  color: #b2b6c3;
}

.cache-1xj7r5t:-ms-input-placeholder {
  color: #b2b6c3;
}

.cache-1xj7r5t::placeholder {
  color: #b2b6c3;
}

<form
    novalidate=""
  >
    <div
      class="cache-6rcy61 ebsitvw1"
    >
      <input
        aria-label="test"
        class="cache-1xj7r5t ebsitvw0"
        name="test"
        placeholder="placeholder"
        type="text"
        value=""
      />
    </div>
  </form>
</DocumentFragment>
`;

exports[`ToggleField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-6rcy61 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  background-color: #ffffff;
  padding: 8px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
}

.cache-6rcy61:focus-within {
  border: 1px solid #4f0599;
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-6rcy61>* {
  margin: 6px;
}

<form
    novalidate=""
  >
    <div
      class="cache-6rcy61 ebsitvw1"
    />
  </form>
</DocumentFragment>
`;

exports[`ToggleField should render correctly with default tags 1`] = `
<DocumentFragment>
  .cache-6rcy61 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  background-color: #ffffff;
  padding: 8px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
}

.cache-6rcy61:focus-within {
  border: 1px solid #4f0599;
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-6rcy61>* {
  margin: 6px;
}

.cache-qipwns {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #4a4f62;
  background: #ffffff;
  border: solid 1px #e6e9f0;
}

.cache-td7tdt {
  font-size: 12px;
  font-weight: 500;
  color: inherit;
  max-width: 232px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.cache-26x052-StyledButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: transparent;
  color: #4a4f62;
  width: 32px;
  height: 32px;
  padding: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.cache-26x052-StyledButton:hover,
.cache-26x052-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-26x052-StyledButton>svg {
  pointer-events: none;
}

.cache-zy3rt6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  pointer-events: none;
}

.cache-1ah7xw8-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1xj7r5t {
  font-size: 16px;
  color: #4a4f62;
  border: none;
  outline: none;
  background-color: #ffffff;
}

.cache-1xj7r5t::-webkit-input-placeholder {
  color: #b2b6c3;
}

.cache-1xj7r5t::-moz-placeholder {
  color: #b2b6c3;
}

.cache-1xj7r5t:-ms-input-placeholder {
  color: #b2b6c3;
}

.cache-1xj7r5t::placeholder {
  color: #b2b6c3;
}

<form
    novalidate=""
  >
    <div
      class="cache-6rcy61 ebsitvw1"
    >
      <span
        class="cache-qipwns e1vt8sjg2"
      >
        <span
          aria-disabled="false"
          class="cache-td7tdt e1vt8sjg1"
        >
          tags-1
        </span>
        <button
          aria-disabled="false"
          aria-label="Close tag"
          class="e1vt8sjg0 cache-26x052-StyledButton em6gco80"
          type="button"
        >
          <div
            class="cache-zy3rt6 em6gco81"
          >
            <svg
              class="cache-1ah7xw8-sizeStyles etwatq50"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
              />
            </svg>
          </div>
        </button>
      </span>
      <span
        class="cache-qipwns e1vt8sjg2"
      >
        <span
          aria-disabled="false"
          class="cache-td7tdt e1vt8sjg1"
        >
          tags-2
        </span>
        <button
          aria-disabled="false"
          aria-label="Close tag"
          class="e1vt8sjg0 cache-26x052-StyledButton em6gco80"
          type="button"
        >
          <div
            class="cache-zy3rt6 em6gco81"
          >
            <svg
              class="cache-1ah7xw8-sizeStyles etwatq50"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
              />
            </svg>
          </div>
        </button>
      </span>
      <input
        aria-label="test-tags"
        class="cache-1xj7r5t ebsitvw0"
        name="test-tags"
        placeholder=""
        type="text"
        value=""
      />
    </div>
  </form>
</DocumentFragment>
`;

exports[`ToggleField should render correctly with default tags on initialValues Form 1`] = `
<DocumentFragment>
  .cache-6rcy61 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  background-color: #ffffff;
  padding: 8px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
}

.cache-6rcy61:focus-within {
  border: 1px solid #4f0599;
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-6rcy61>* {
  margin: 6px;
}

.cache-qipwns {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #4a4f62;
  background: #ffffff;
  border: solid 1px #e6e9f0;
}

.cache-td7tdt {
  font-size: 12px;
  font-weight: 500;
  color: inherit;
  max-width: 232px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.cache-26x052-StyledButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: transparent;
  color: #4a4f62;
  width: 32px;
  height: 32px;
  padding: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.cache-26x052-StyledButton:hover,
.cache-26x052-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-26x052-StyledButton>svg {
  pointer-events: none;
}

.cache-zy3rt6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  pointer-events: none;
}

.cache-1ah7xw8-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1xj7r5t {
  font-size: 16px;
  color: #4a4f62;
  border: none;
  outline: none;
  background-color: #ffffff;
}

.cache-1xj7r5t::-webkit-input-placeholder {
  color: #b2b6c3;
}

.cache-1xj7r5t::-moz-placeholder {
  color: #b2b6c3;
}

.cache-1xj7r5t:-ms-input-placeholder {
  color: #b2b6c3;
}

.cache-1xj7r5t::placeholder {
  color: #b2b6c3;
}

<form
    novalidate=""
  >
    <div
      class="cache-6rcy61 ebsitvw1"
    >
      <span
        class="cache-qipwns e1vt8sjg2"
      >
        <span
          aria-disabled="false"
          class="cache-td7tdt e1vt8sjg1"
        >
          tags-1
        </span>
        <button
          aria-disabled="false"
          aria-label="Close tag"
          class="e1vt8sjg0 cache-26x052-StyledButton em6gco80"
          type="button"
        >
          <div
            class="cache-zy3rt6 em6gco81"
          >
            <svg
              class="cache-1ah7xw8-sizeStyles etwatq50"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
              />
            </svg>
          </div>
        </button>
      </span>
      <span
        class="cache-qipwns e1vt8sjg2"
      >
        <span
          aria-disabled="false"
          class="cache-td7tdt e1vt8sjg1"
        >
          tags-2
        </span>
        <button
          aria-disabled="false"
          aria-label="Close tag"
          class="e1vt8sjg0 cache-26x052-StyledButton em6gco80"
          type="button"
        >
          <div
            class="cache-zy3rt6 em6gco81"
          >
            <svg
              class="cache-1ah7xw8-sizeStyles etwatq50"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
              />
            </svg>
          </div>
        </button>
      </span>
      <input
        aria-label="formTags"
        class="cache-1xj7r5t ebsitvw0"
        name="formTags"
        placeholder=""
        type="text"
        value=""
      />
    </div>
  </form>
</DocumentFragment>
`;

exports[`ToggleField should render correctly with default tags on initialValues Form 2`] = `
<DocumentFragment>
  .cache-6rcy61 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  background-color: #ffffff;
  padding: 8px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
}

.cache-6rcy61:focus-within {
  border: 1px solid #4f0599;
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-6rcy61>* {
  margin: 6px;
}

.cache-qipwns {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #4a4f62;
  background: #ffffff;
  border: solid 1px #e6e9f0;
}

.cache-td7tdt {
  font-size: 12px;
  font-weight: 500;
  color: inherit;
  max-width: 232px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.cache-26x052-StyledButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: transparent;
  color: #4a4f62;
  width: 32px;
  height: 32px;
  padding: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.cache-26x052-StyledButton:hover,
.cache-26x052-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-26x052-StyledButton>svg {
  pointer-events: none;
}

.cache-zy3rt6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  pointer-events: none;
}

.cache-1ah7xw8-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1xj7r5t {
  font-size: 16px;
  color: #4a4f62;
  border: none;
  outline: none;
  background-color: #ffffff;
}

.cache-1xj7r5t::-webkit-input-placeholder {
  color: #b2b6c3;
}

.cache-1xj7r5t::-moz-placeholder {
  color: #b2b6c3;
}

.cache-1xj7r5t:-ms-input-placeholder {
  color: #b2b6c3;
}

.cache-1xj7r5t::placeholder {
  color: #b2b6c3;
}

<form
    novalidate=""
  >
    <div
      class="cache-6rcy61 ebsitvw1"
    >
      <span
        class="cache-qipwns e1vt8sjg2"
      >
        <span
          aria-disabled="false"
          class="cache-td7tdt e1vt8sjg1"
        >
          tags-1
        </span>
        <button
          aria-disabled="false"
          aria-label="Close tag"
          class="e1vt8sjg0 cache-26x052-StyledButton em6gco80"
          type="button"
        >
          <div
            class="cache-zy3rt6 em6gco81"
          >
            <svg
              class="cache-1ah7xw8-sizeStyles etwatq50"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
              />
            </svg>
          </div>
        </button>
      </span>
      <span
        class="cache-qipwns e1vt8sjg2"
      >
        <span
          aria-disabled="false"
          class="cache-td7tdt e1vt8sjg1"
        >
          tags-2
        </span>
        <button
          aria-disabled="false"
          aria-label="Close tag"
          class="e1vt8sjg0 cache-26x052-StyledButton em6gco80"
          type="button"
        >
          <div
            class="cache-zy3rt6 em6gco81"
          >
            <svg
              class="cache-1ah7xw8-sizeStyles etwatq50"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
              />
            </svg>
          </div>
        </button>
      </span>
      <span
        class="cache-qipwns e1vt8sjg2"
      >
        <span
          aria-disabled="false"
          class="cache-td7tdt e1vt8sjg1"
        >
          test
        </span>
        <button
          aria-disabled="false"
          aria-label="Close tag"
          class="e1vt8sjg0 cache-26x052-StyledButton em6gco80"
          type="button"
        >
          <div
            class="cache-zy3rt6 em6gco81"
          >
            <svg
              class="cache-1ah7xw8-sizeStyles etwatq50"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
              />
            </svg>
          </div>
        </button>
      </span>
      <input
        aria-label="formTags"
        class="cache-1xj7r5t ebsitvw0"
        name="formTags"
        placeholder=""
        type="text"
        value=""
      />
    </div>
  </form>
</DocumentFragment>
`;
